@@ -1,3 +1,8 @@
+2006-06-30  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/connector-context.cpp, src/widgets/toolbox.cpp:
+	  Add undo event descriptions for the connector context.
+
 2006-06-27  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* packaging/macosx/ScriptExec/main.c:
@@ -308,7 +313,7 @@
 2006-05-21  Marco Scholten  <mscholtn@xs4all.nl>
 
 	* src/ui/dialog/inkscape-preferences.cpp, 
-      src/ui/dialog/inkscape-preferences.h: 
+	  src/ui/dialog/inkscape-preferences.h: 
 	  Added 'Show close button on dialogs' option.
 
 2006-05-21  MenTaLguY  <mental@rydia.net>
